feat: adding support for register/login with Rarimo & zk proof of passport
Most of this commit is related to the integration of the Rarimo protocol into Agora, which was developed with funding from the European Union’s Horizon Europe 2020 research and innovation program, as part of the NGI SARGASSO project under grant agreement No. 101092887.
