# services/agora/src/shared/types/dto.ts
@@ -16,6 +16,7 @@ import {
     zodPhoneNumber,
     zodExtendedCommentData,
 } from "./zod.js";
+import { zodRarimoStatusAttributes } from "./zod.js";
 
 // eslint-disable-next-line @typescript-eslint/no-extraneous-class
 export class Dto {
@@ -62,8 +63,9 @@ export class Dto {
             userId: zodUserId,
             sessionExpiry: z.date(),
             status: z.number(),
-            expose: z.boolean()
-        }).strict();
+            expose: z.boolean(),
+        })
+        .strict();
     static isLoggedInResponse = z.discriminatedUnion("isLoggedIn", [
         z.object({ isLoggedIn: z.literal(true), userId: zodUserId }).strict(),
         z
@@ -84,65 +86,95 @@ export class Dto {
         .object({
             showHidden: z.boolean(),
             lastSlugId: z.string().optional(),
-            isAuthenticatedRequest: z.boolean()
+            isAuthenticatedRequest: z.boolean(),
         })
         .strict();
     static fetchFeedResponse = z.object({
         postDataList: z.array(zodExtendedPostData),
-        reachedEndOfFeed: z.boolean()
+        reachedEndOfFeed: z.boolean(),
     });
-    static postFetchRequest = z.object({
-        postSlugId: zodSlugId, // z.object() does not exist :(
-    }).strict();
-    static postFetch200 = z.object({
-        post: zodExtendedPostData, // z.object() does not exist :(
-        comments: z.array(zodCommentItem),
-    }).strict();
-    static fetchCommentFeedRequest = z.object({
-        postSlugId: zodSlugId, // z.object() does not exist :(
-        createdAt: z.string().datetime().optional(),
-    }).strict();
+    static postFetchRequest = z
+        .object({
+            postSlugId: zodSlugId, // z.object() does not exist :(
+        })
+        .strict();
+    static postFetch200 = z
+        .object({
+            post: zodExtendedPostData, // z.object() does not exist :(
+            comments: z.array(zodCommentItem),
+        })
+        .strict();
+    static fetchCommentFeedRequest = z
+        .object({
+            postSlugId: zodSlugId, // z.object() does not exist :(
+            createdAt: z.string().datetime().optional(),
+        })
+        .strict();
     static fetchCommentFeedResponse = z.array(zodCommentItem);
-    static createNewPostRequest = z.object({
-        postTitle: zodPostTitle,
-        postBody: zodPostBody,
-        pollingOptionList: zodPollOptionTitle.array().optional()
-    }).strict();
-    static createNewPostResponse = z.object({ postSlugId: z.string() }).strict();
-    static fetchPostBySlugIdRequest = z.object({
-        postSlugId: zodSlugId,
-        isAuthenticatedRequest: z.boolean()
-    }).strict();
-    static fetchPostBySlugIdResponse = z.object({
-        postData: zodExtendedPostData
-    }).strict();
-    static createCommentRequest = z.object({
-        postSlugId: z.string(),
-        commentBody: z.string()
-    }).strict();
-    static createCommentResponse = z.object({ commentSlugId: z.string() }).strict();
-    static submitPollResponseRequest = z.object({
-        voteOptionChoice: z.number(),
-        postSlugId: z.string()
-    }).strict();
+    static createNewPostRequest = z
+        .object({
+            postTitle: zodPostTitle,
+            postBody: zodPostBody,
+            pollingOptionList: zodPollOptionTitle.array().optional(),
+        })
+        .strict();
+    static createNewPostResponse = z
+        .object({ postSlugId: z.string() })
+        .strict();
+    static fetchPostBySlugIdRequest = z
+        .object({
+            postSlugId: zodSlugId,
+            isAuthenticatedRequest: z.boolean(),
+        })
+        .strict();
+    static fetchPostBySlugIdResponse = z
+        .object({
+            postData: zodExtendedPostData,
+        })
+        .strict();
+    static createCommentRequest = z
+        .object({
+            postSlugId: z.string(),
+            commentBody: z.string(),
+        })
+        .strict();
+    static createCommentResponse = z
+        .object({ commentSlugId: z.string() })
+        .strict();
+    static submitPollResponseRequest = z
+        .object({
+            voteOptionChoice: z.number(),
+            postSlugId: z.string(),
+        })
+        .strict();
     static fetchUserPollResponseRequest = z.array(z.string());
     static fetchUserPollResponseResponse = z.array(zodPollResponse);
-    static fetchUserVotesForPostSlugIdRequest = z.object({
-        postSlugIdList: z.array(z.string())
-    }).strict();
-    static fetchUserVotesForPostSlugIdsResponse = z.array(z.object({
-        commentSlugId: z.string(),
-        votingAction: zodVotingOption
-    }).strict());
-    static castVoteForCommentRequest = z.object({
-        commentSlugId: z.string(),
-        chosenOption: zodVotingAction
-    }).strict();
-    static fetchUserProfileResponse = z.object({
-        activePostCount: z.number().gte(0),
-        createdAt: z.date(),
-        userName: zodUserName,
-    }).strict();
+    static fetchUserVotesForPostSlugIdRequest = z
+        .object({
+            postSlugIdList: z.array(z.string()),
+        })
+        .strict();
+    static fetchUserVotesForPostSlugIdsResponse = z.array(
+        z
+            .object({
+                commentSlugId: z.string(),
+                votingAction: zodVotingOption,
+            })
+            .strict(),
+    );
+    static castVoteForCommentRequest = z
+        .object({
+            commentSlugId: z.string(),
+            chosenOption: zodVotingAction,
+        })
+        .strict();
+    static fetchUserProfileResponse = z
+        .object({
+            activePostCount: z.number().gte(0),
+            createdAt: z.date(),
+            userName: zodUserName,
+        })
+        .strict();
     static fetchUserPostsRequest = z
         .object({
             lastPostSlugId: zodSlugId.optional(),
@@ -157,14 +189,35 @@ export class Dto {
     static fetchUserCommentsResponse = z.array(zodExtendedCommentData);
     static deletePostBySlugIdRequest = z
         .object({
-            postSlugId: zodSlugId
+            postSlugId: zodSlugId,
         })
         .strict();
     static deleteCommentBySlugIdRequest = z
         .object({
-            commentSlugId: zodSlugId
+            commentSlugId: zodSlugId,
         })
         .strict();
+    static generateVerificationLink200 = z.object({
+        verificationLink: z.string().url(),
+    });
+    static verifyUserStatusAndAuthenticate200 = z.discriminatedUnion(
+        "rarimoStatus",
+        [
+            z
+                .object({
+                    rarimoStatus: z.literal("verified"),
+                    nullifier: z.string(),
+                })
+                .strict(),
+            z
+                .object({
+                    rarimoStatus: zodRarimoStatusAttributes.exclude([
+                        "verified",
+                    ]),
+                })
+                .strict(),
+        ],
+    );
 }
 
 export type AuthenticateRequestBody = z.infer<
@@ -181,9 +234,20 @@ export type FetchPostBySlugIdResponse = z.infer<
     typeof Dto.fetchPostBySlugIdResponse
 >;
 export type CreateCommentResponse = z.infer<typeof Dto.createCommentResponse>;
-export type FetchUserPollResponseResponse = z.infer<typeof Dto.fetchUserPollResponseResponse>;
-export type FetchUserVotesForPostSlugIdsResponse = z.infer<typeof Dto.fetchUserVotesForPostSlugIdsResponse>;
-export type FetchCommentFeedResponse = z.infer<typeof Dto.fetchCommentFeedResponse>;
+export type FetchUserPollResponseResponse = z.infer<
+    typeof Dto.fetchUserPollResponseResponse
+>;
+export type FetchUserVotesForPostSlugIdsResponse = z.infer<
+    typeof Dto.fetchUserVotesForPostSlugIdsResponse
+>;
+export type FetchCommentFeedResponse = z.infer<
+    typeof Dto.fetchCommentFeedResponse
+>;
 export type FetchFeedResponse = z.infer<typeof Dto.fetchFeedResponse>;
-export type FetchUserProfileResponse = z.infer<typeof Dto.fetchUserProfileResponse>;
+export type FetchUserProfileResponse = z.infer<
+    typeof Dto.fetchUserProfileResponse
+>;
 export type FetchUserPostsResponse = z.infer<typeof Dto.fetchUserPostsResponse>;
+export type VerifyUserStatusAndAuthenticate200 = z.infer<
+    typeof Dto.verifyUserStatusAndAuthenticate200
+>;
